<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EShop</string>
    <string name="main_home">首页</string>
    <string name="main_category">分类</string>
    <string name="main_nearby">附近</string>
    <string name="main_shopping_cart">购物车</string>
    <string name="main_mine">我的</string>
    <string name="home_promote_goods">促销单品</string>
    <string name="home_title">首&#160;&#160;页</string>
    <string name="category_title">分&#160;&#160;类</string>
    <string name="search_hint">请输入要搜索的商品</string>
    <string name="home_search_hint">关键词搜索</string>
    <string name="search_order_is_hot">热销</string>
    <string name="search_order_price">价格</string>
    <string name="goods_title_info">商品</string>
    <string name="goods_title_details">详情</string>
    <string name="goods_title_comments">评价</string>
    <string name="goods_title_recommend" tools:ignore="ExtraTranslation">推荐</string>
    <string name="goods_buy_it_now">立即购买</string>
    <string name="goods_add_to_shopping_cart">加入购物车</string>
    <string name="goods_comments">商品评价</string>
    <string name="goods_details">商品详情</string>
    <string name="goods_no_comments_available">本商品暂无评价</string>
    <string name="goods_msg_must_choose_number">请选择数量</string>
    <string name="goods_msg_add_success">添加成功</string>
    <string name="goods_inventory">库存</string>
    <string name="goods_price">￥%1$s</string>
    <string name="goods_goods_unit">/%1$s</string>
    <string name="goods_shop_grade">店铺评分：%1$s</string>
    <string name="goods_collect_shop">收藏店铺</string>
    <string name="goods_enter_shop">进入店铺</string>
    <string name="goods_show_more_comment">查看更多评价</string>
    <string name="goods_show_more">查看更多</string>
    <string name="goods_my_shop_recommend">本店推荐</string>
    <string name="goods_nearly_recommend">附近热推</string>
    <string name="goods_details_no_recommend">暂无推荐商品</string>
    <string name="goods_details_start_pintuan_bug_alone">单独购买</string>
    <string name="goods_details_start_pintuan_i_start">我要开团</string>
    <string name="goods_tuanpin_purchase_limit">限购</string>
    <string name="goods_tuanpin_purchase_finish_rate">完成率</string>
    <string name="goods_tuanpin_anim">目标</string>
    <string name="goods_tuanpin_from_start">距离开始：</string>
    <string name="goods_appeal_title">商品申诉</string>
    <string name="goods_appeal_type">申诉类型:</string>
    <string name="goods_appeal_theme">主&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;题:</string>
    <string name="goods_appeal_theme_hint">请输入主题</string>
    <string name="goods_appeal_content">内&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;容:</string>
    <string name="goods_appeal_content_hint">请输入内容</string>
    <string name="goods_appeal_picture">图&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;片:</string>
    <string name="goods_appeal_commit">提交申诉</string>
    <string name="goods_list_xianshiqianggou_title">限时抢购</string>
    <string name="goods_list_xianshiqianggou_ing">正在抢购</string>
    <string name="goods_list_xianshiqianggou_comming_soon">即将开始</string>
    <string name="goods_list_xianshiqianggou_has_sale">已售：%1$s</string>
    <string name="goods_list_shop_distance">距离：%1$s</string>
    <string name="goods_list_shop_favorable_rate">好评率：%1$s</string>
    <string name="goods_list_xianshiqianggou_distance_end">距离结束:</string>
    <string name="cantuan_immedialge_title">立即参团</string>
    <string name="shop_name">店铺</string>
    <string name="shop_introduction">店铺简介</string>
    <string name="shop_business_time">营业时间：%1$s</string>
    <string name="shop_phone">电话</string>
    <string name="shop_service">客服</string>
    <string name="shop_shequpintuan">社区拼团</string>
    <string name="shop_manjianzhuanqu">满减专区</string>
    <string name="shop_xianshiqianggou">限时抢购</string>
    <string name="shop_youhuiquan">优惠券</string>
    <string name="shop_please_input_search_goods_name">请输入搜索的商品</string>
    <string name="shop_goods_seal_count">销量：%1$s</string>
    <string name="shop_goods_choose_specification">选规格</string>
    <string name="shop_goods_specification">规格</string>
    <string name="shop_goods_buy_number">购买数量</string>
    <string name="shop_goods_add_to_shopping_cart">加入购物车</string>
    <string name="shop_list_search_input_hint">搜索您想要的好店</string>
    <string name="shop_base_info_title">店铺基本信息</string>
    <string name="shop_base_info_shop_name">店铺名称：</string>
    <string name="shop_base_info_business_time">营业时间：</string>
    <string name="shop_base_info_shop_address">店铺地址：</string>
    <string name="shop_base_info_shop_qualification">营业资质：</string>
    <string name="shop_recommend_good_shop">推荐好店</string>
    <string name="discount_coupon_list_title">免费领券</string>
    <string name="discount_coupon_validity_duration">有效期：%1$s</string>
    <string name="discount_coupon_receive_immediate">立即领取</string>
    <string name="discount_coupon_use_immediate">立即使用</string>
    <string name="group_purchase_title">多人团</string>
    <string name="manjian_title">满减专场</string>
    <string name="manjian_search_input_hint">搜索您想要的宝贝</string>
    <string name="manjian_more">更多</string>
    <string name="confirm_order_title">确认订单</string>
    <string name="confirm_order_get_goods_by_self">到店自取</string>
    <string name="confirm_order_get_goods_by_peisong">选择配送</string>
    <string name="confirm_order_support_ziqu">支持自取</string>
    <string name="confirm_order_specification">规格：%1$s</string>
    <string name="confirm_order_no_youhuiquan">暂无可使用的优惠券</string>
    <string name="confirm_order_the_reserved_phone">预留电话：</string>
    <string name="confirm_order_the_reserved_phone_hint">必填，以便与您及时联系</string>
    <string name="confirm_order_the_merchants_to_remind">商家提醒：</string>
    <string name="confirm_order_the_merchants_to_remind_empty">暂无提醒！！！</string>
    <string name="confirm_order_the_buyer_message">买家留言：</string>
    <string name="confirm_order_the_buyer_message_can_empty">选填，填写自己的要求</string>
    <string name="confirm_order_need_pay">需支付：</string>
    <string name="confirm_order_sumit_order">提交订单</string>
    <string name="confirm_order_delivery_address">收货地址：</string>
    <string name="confirm_order_no_delivery_address">暂无收货地址，请点击添加</string>
    <string name="choose_discount_coupon_title">选择优惠券</string>
    <string name="choose_discount_coupon_dont_use">不使用优惠券</string>
    <string name="message_title">消息</string>
    <string name="message_title_appeal">申诉</string>
    <string name="appeal_detail">申诉详情</string>
    <string name="appeal_state_un_deal">未处理</string>
    <string name="appeal_state_dealed">已处理</string>
    <string name="appeal_detail_info">详细内容:</string>
    <string name="feed_back_title">意见反馈</string>
    <string name="feed_back_theme">反馈主题</string>
    <string name="feed_back_theme_tip">请输入您要反馈的主题，例如：账号问题</string>
    <string name="feed_back_content">反馈内容</string>
    <string name="feed_back_content_tip">请输入具体内容</string>
    <string name="feed_back_submit">提交反馈</string>
    <string name="cart_title">购物车</string>
    <string name="cart_action_sign_in">去登陆</string>
    <string name="cart_action_summit_order">提交订单</string>
    <string name="cart_msg_is_empty">你的购物车还是空的</string>
    <string name="cart_msg_delete_goods">是否要删除此商品</string>
    <string name="cart_number">数量</string>
    <string name="cart_total_price">总额:</string>
    <string name="cart_pay_order">订单支付</string>
    <string name="cart_pay_weixin">微信支付</string>
    <string name="mine_title_sign_in">登&#160;&#160;录</string>
    <string name="mine_title_sign_up">注&#160;&#160;册</string>
    <string name="mine_hint_username">请输入用户名</string>
    <string name="mine_hint_password">请输入密码</string>
    <string name="mine_hint_email">请输入邮箱地址</string>
    <string name="mine_msg_sign_in_success">登录成功</string>
    <string name="mine_msg_sign_up_success">注册成功</string>
    <string name="mine_sign_in_or_sign_up">登录/注册</string>
    <string name="mine_action_sign_in">登录</string>
    <string name="mine_action_sign_up">注册</string>
    <string name="mine_fast_sign_up">快速注册</string>
    <string name="mine_order_wait_pay">待付款</string>
    <string name="mine_order_wait_ship">待发货</string>
    <string name="mine_order_pin">拼团中</string>
    <string name="mine_order_shipped">已发货</string>
    <string name="mine_order_comment">待评价</string>
    <string name="mine_order_history">历史</string>
    <string name="mine_order_backmoney">退款售后</string>
    <string name="mine_order_unconfirmed">待确认订单</string>
    <string name="mine_order_all">全部订单</string>
    <string name="mine_order">我的订单</string>
    <string name="mine_favorite">我的收藏</string>
    <string name="mine_zj">我的足迹</string>
    <string name="mine_help">帮助</string>
    <string name="mine_customer">客服帮助</string>
    <string name="mine_openshop">申请开店</string>
    <string name="mine_shareapp">分享应用</string>
    <string name="address_title_add">新增地址</string>
    <string name="address_title_edit">编辑地址</string>
    <string name="address_title_manage">管理收货地址</string>
    <string name="address_title_manage2">地址管理</string>
    <string name="address_consignee">收件人姓名</string>
    <string name="address_tel">手机号码</string>
    <string name="address_phone">联系电话:</string>
    <string name="address_region">所在地区</string>
    <string name="address_detail">详细地址</string>
    <string name="address_zipcode">邮政编码</string>
    <string name="address_email">邮箱地址</string>
    <string name="address_hint_consignee">请如实填写收件人姓名</string>
    <string name="address_hint_tel">请如实填写手机号码</string>
    <string name="address_hint_region">省, 市, 区</string>
    <string name="address_hint_detail">请如实填写收件人详细地址</string>
    <string name="address_hint_zipcode">请如实填写邮政编码</string>
    <string name="address_hint_email">请如实填写收件人邮箱</string>
    <string name="address_msg_add_success">添加成功</string>
    <string name="address_msg_edit_success">编辑成功</string>
    <string name="address_choose_province">选择省份</string>
    <string name="address_choose_city">选择城市</string>
    <string name="address_choose_district">选择地区</string>
    <string name="address_action_save_and_use">保存并使用</string>
    <string name="address_action_set_default">设为默认</string>
    <string name="address_action_create">添加收货地址</string>
    <string name="address_msg_can_not_delete_default">不能删除默认地址</string>
    <string name="order_title_preview">确认订单</string>
    <string name="order_title_wait_pay">待付款订单</string>
    <string name="order_title_wait_ship">待发货订单</string>
    <string name="order_title_shipped">已发货订单</string>
    <string name="order_title_history">历史订单</string>
    <string name="order_title_unconfirmed">待确认订单</string>
    <string name="order_choose_payment">选择支付方式</string>
    <string name="order_choose_shipping">选择派送方式</string>
    <string name="order_consignee_name">收件人: %s</string>
    <string name="order_goods_amount">数量: %s</string>
    <string name="order_payment">支付方式</string>
    <string name="order_shipping">派送方式</string>
    <string name="order_payment_name">支付方式 (%s)</string>
    <string name="order_shipping_name">派送方式 (%s)</string>
    <string name="order_goods_price">商品总额: %s</string>
    <string name="order_shipping_price">运费金额: %s</string>
    <string name="order_msg_purchase_now">订单已生成, 是否现在支付?</string>
    <string name="order_sn">订单编号: %s</string>
    <string name="order_time">下单时间: %s</string>
    <string name="order_total">总额: %s</string>
    <string name="order_action_purchase">支付</string>
    <string name="order_pay_success">支付成功</string>
    <string name="order_is_canceled">订单已取消</string>
    <string name="order_look">查看订单</string>
    <string name="order_gohome">返回首页</string>
    <string name="collect_title">收藏列表</string>
    <string name="collect_msg_already_collected">本商品已收藏</string>
    <string name="login_hint_phone">请输入您的手机号</string>
    <string name="login_hint_pwd">请输入登录密码</string>
    <string name="login_hint_pwd_confirm">请确认登录密码</string>
    <string name="login_sms">发送验证码</string>
    <string name="login_hint_smscode">请输入验证码</string>
    <string name="login_agreement">我已阅读并同意【众聚逛选】服务协议</string>
</resources>