<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding_confirm_order"
    android:paddingRight="@dimen/padding_confirm_order"
    android:paddingBottom="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop_youhuiquan"
            android:textColor="@color/global_text_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/ic_arrow_gray_right"
            android:drawablePadding="6dp"
            android:text="@string/confirm_order_no_youhuiquan"
            android:textColor="@color/global_hint_text_color" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/global_divide_line_color" />

    <LinearLayout
        android:id="@+id/ll_yuliu_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/confirm_order_the_reserved_phone"
            android:textColor="@color/global_text_color"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ellipsize="end"
            android:hint="@string/confirm_order_the_reserved_phone_hint"
            android:inputType="phone"
            android:lines="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColorHint="#e1392c"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/global_divide_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/confirm_order_the_merchants_to_remind"
            android:textColor="#fa943b"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ellipsize="end"
            android:text="@string/confirm_order_the_merchants_to_remind_empty"
            android:textColor="#fa943b"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/global_divide_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/confirm_order_the_buyer_message"
            android:textColor="@color/global_text_color"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ellipsize="end"
            android:hint="@string/confirm_order_the_buyer_message_can_empty"
            android:inputType="text"
            android:maxLines="3"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColorHint="@color/global_hint_text_color"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>